--- a/src/magnet/magnet.scss
+++ b/src/magnet/magnet.scss
@@ -4,12 +4,12 @@
 @import "../base/media-queries";
 
 .magnet {
-  background: white;
+  //background: white;
   width: 100%;
 
   &__canvas {
     width: 100%;
-    height: 900px;
+    height: 70vw;
     display: block;
   }
 }
