texting and counters

--- a/src/animation/animation.scss
+++ b/src/animation/animation.scss
@@ -102,6 +102,11 @@
     &--have-a-task {
       transform: translateX(50vw);
     }
+
+    &--user-experience {
+      transform: translateX(45vw);
+    }
+
   }
 
   &__title-wrapper {
