--- a/src/case-intro/case-intro.scss
+++ b/src/case-intro/case-intro.scss
@@ -44,4 +44,19 @@
 
   }
 
+  &__counters {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 20vw 0;
+    width: 50%;
+    @include margin-auto;
+    text-align: center;
+  }
+
+  &__counter {
+    font-size: 6vw;
+    @include manrope;
+    color: var(--white-color);
+  }
+
 }
