--- a/src/animation/animation.scss
+++ b/src/animation/animation.scss
@@ -71,6 +71,11 @@
     will-change: transform;
     transition: none;
     transform: matrix(1.00, 0.00, 0.00, 1.00, 0, 0);
+
+    .temp & {
+      height: auto;
+      position: static;
+    }
   }
 
   $ready-title: '.animation__block--ready-title';
@@ -117,7 +122,7 @@
   &__title {
     will-change: transform;
     transition: transform 1300ms cubic-bezier(.25, .74, .22, .99);
-    transform: translate3d(0, 100%, 0);
+    //transform: translate3d(0, 100%, 0);!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
     transform-origin: top right;
 
     &--active {
@@ -132,7 +137,7 @@
   &__text {
     will-change: transform;
     transition: transform 900ms cubic-bezier(.25, .74, .22, .99);
-    transform: translate3d(0, 100%, 0);
+    //transform: translate3d(0, 100%, 0);!!!!!!!!!!!!!!!!!!!!!!!!!!!
     transform-origin: top right;
     transition-delay: .1s;
     display: flex;
