--- a/src/testimonial/testimonial.scss
+++ b/src/testimonial/testimonial.scss
@@ -6,18 +6,119 @@
 .testimonial {
 
   &__block {
-    padding: 30vw 0;
+    padding-top: 8vw;
+    position: relative;
+    z-index: 1;
+  }
+
+  &__title-block {
+    display: grid;
+    grid-template-columns: 4fr 1fr;
+  }
+
+  &__title {
+    @include manrope;
+    font-weight: 200;
+    font-size: 12.1417vw;
+    letter-spacing: -0.033em;
+    color: var(--natural-text-color);
+  }
+
+  &__subtitle {
+    padding-top: 11.5vw;
+  }
+
+  &__subtitle-line {
+    @include manrope;
+    font-weight: 800;
+    font-size: 1.3548vw;
+    letter-spacing: -0.033em;
+    color: var(--main-text-color);
+    margin-top: -.5vw;
+  }
+
+  &__content {
+    padding-top: 17vw;
+    padding-left: 25vw;
+    padding-bottom: 25vw;
+  }
+
+  &__item-wrapper {
   }
 
   &__item {
-    width: 50%;
-    @include margin-auto;
-    font-size: 3vw;
+    width: 100%;
     color: var(--white-color);
+    font-size: 4.1688vw;
+    line-height: 110%;
+    letter-spacing: -0.033em;
+    padding-right: 8vw;
 
     &--texting:after {
       content: '|';
     }
-
   }
+
+  &__item-name {
+    color: var(--natural-text-color);
+
+    @include manrope;
+    font-size: 3.4392vw;
+    line-height: 106%;
+    letter-spacing: -0.033em;
+    padding-top: 4vw;
+  }
+
+  &__screenshots {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 16vw;
+    padding-right: 11vw;
+    margin-top: 16vw;
+    position: relative;
+    z-index: 1;
+  }
+
+  &__screenshots-item {
+    position: relative;
+    z-index: 2;
+  }
+
+  &__screenshots-item-name-block {
+    @include manrope;
+    font-size: 1.7196vw;
+    letter-spacing: -0.033em;
+    margin-bottom: 23vw;
+
+    &--top {
+      margin-top: 27vw;
+      font-size: 1.4vw;
+      margin-bottom: 0;
+    }
+  }
+
+  &__screenshots-item-name {
+    color: var(--natural-text-color);
+  }
+
+  &__screenshots-item-name-title {
+    color: var(--main-text-color);
+  }
+
+  &__screenshots-item-img {
+    width: 100%;
+    height: auto;
+    display: block;
+  }
+
+  &__background {
+    position: absolute;
+    left: -29vw;
+    top: 10vw;
+
+    & .case-intro__filter-text {
+      font-size: 8.6503vw;
+    }
+  }
+
 }
