--- a/src/loader/loader.scss
+++ b/src/loader/loader.scss
@@ -13,7 +13,9 @@
   bottom: 0;
   @include flex-column-center;
   background: var(--black-color);
-  opacity: 1 !important;
+  //opacity: 1 !important;
+  visibility: hidden;
+
   transition: opacity 300ms ease-out;
 
   &--hide {
