--- a/src/modal/modal.scss
+++ b/src/modal/modal.scss
@@ -6,7 +6,7 @@
 .modal {
   $open: '.modal--open';
 
-  display: none;
+  //display: none;
   position: fixed;
   @include absolute-fill;
   height: 100vh;
@@ -18,7 +18,7 @@
   visibility: hidden;
 
   &--open {
-    display: block;
+    //display: block;
   }
 
   &--show {
@@ -39,6 +39,7 @@
     right: -3vw;
     top: -3vw;
     cursor: pointer;
+    z-index: 3;
   }
 
   $close-hover: '.modal__close:hover';
@@ -79,7 +80,6 @@
     position: absolute;
     @include absolute-fill;
     z-index: 1;
-    background: white;
   }
 
   &__header {
