--- a/src/header/header.scss
+++ b/src/header/header.scss
@@ -2,3 +2,52 @@
 @import "../base/mixins";
 @import "../base/variables";
 @import "../base/media-queries";
+
+.header {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  z-index: 1;
+
+  &__block {
+    @include flex-row-center;
+    justify-content: space-between;
+    padding: 3.5vw 0;
+  }
+
+  &__logo {
+    width: 2.5013vw;
+  }
+
+  &__logo-img {
+    width: 100%;
+    height: auto;
+    display: block;
+  }
+
+  &__logo-img-item {
+    fill: var(--white-color);
+  }
+
+  &__menu {
+    @include flex-row-center;
+  }
+
+  &__menu-icon {
+    width: 1.2vw;
+    height: auto;
+    display: block;
+    margin-right: 1vw;
+    margin-top: 0.8vw;
+  }
+
+  &__menu-icon-item {
+    fill: var(--white-color);
+  }
+
+  &__menu-text {
+    color: var(--white-color);
+    font-size: 1.8vw;
+  }
+}
