--- a/src/base/main.scss
+++ b/src/base/main.scss
@@ -81,9 +81,16 @@ html {
   right: 0;
   bottom: 0;
 
+  @include tablet-big-screen {
+    height: auto;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    position: static;
+  }
+
   &.open-modal {
-    height: 0!important;
-    overflow: hidden!important;
+    height: 0 !important;
+    overflow: hidden !important;
   }
 
   &.temp {
@@ -109,12 +116,11 @@ body {
   bottom: 0;
   @include kudryashev;
 
-  .temp & {
+  @include tablet-big-screen {
     height: auto;
     position: static;
-    overflow: hidden;
+    overflow-x: hidden;
   }
-
 }
 
 a {
