--- a/src/lets-discuss/lets-discuss.scss
+++ b/src/lets-discuss/lets-discuss.scss
@@ -17,6 +17,11 @@
     justify-content: space-between;
     padding-right: 7.5vw;
     margin-bottom: 15.6vw;
+
+    @include tablet-big-screen {
+      @include flex-column();
+      padding-right: 0;
+    }
   }
 
   &__desc-item {
@@ -25,12 +30,34 @@
     letter-spacing: -0.033em;
     color: var(--white-color);
 
+    @include tablet-big-screen {
+      width: 100%;
+      font-size: 7.5vw;
+    }
+
     &--1 {
       width: 34vw;
+
+      @include tablet-big-screen {
+        width: 100%;
+      }
     }
 
     &--2 {
+      @include tablet-big-screen {
+        width: 100%;
+        margin-top: 10vw;
+        position: relative;
 
+        &:after {
+          @include pseudo-absolute;
+          width: 100%;
+          bottom: -15vw;
+          left: 0;
+          height: .5vw;
+          background: var(--white-color);
+        }
+      }
     }
   }
 
@@ -41,6 +68,11 @@
   &__link-block {
     position: relative;
     padding-left: 25.8vw;
+
+    @include tablet-big-screen {
+      margin-top: 30vw;
+      padding-left: 0;
+    }
   }
 
   &__link-block-line {
@@ -54,6 +86,10 @@
     transform: scaleX(0);
     transition: all 500ms ease-out;
 
+    @include tablet-big-screen {
+      display: none;
+    }
+
     &.animation__title-wrapper--active {
       transform: scaleX(1);
     }
@@ -64,6 +100,11 @@
     align-items: baseline;
     margin-bottom: 4.8vw;
     position: relative;
+
+    @include tablet-big-screen {
+      @include flex-column();
+      text-align: right;
+    }
   }
 
   &__link-block-title-item {
@@ -75,8 +116,18 @@
     font-weight: 300;
     margin-right: 1vw;
 
+    @include tablet-big-screen {
+      margin-right: 0;
+      margin-left: auto;
+      font-size: 7.5vw;
+    }
+
     &--bold {
       font-weight: 800;
+
+      @include tablet-big-screen {
+        font-size: 15.4vw;
+      }
     }
   }
 
@@ -89,6 +140,11 @@
     font-weight: 700;
     position: relative;
     width: fit-content;
+
+    @include tablet-big-screen {
+      font-size: 11.5vw;
+      margin-top: 10vw;
+    }
 
     &:after {
       @include pseudo-absolute();
