--- a/src/form-check/form-check.scss
+++ b/src/form-check/form-check.scss
@@ -49,6 +49,11 @@
     transform: translateY(-2.4vw) scale(.75);
     pointer-events: none;
 
+    @include tablet-big-screen {
+      font-size: 5vw;
+      transform: translateY(-11vw) scale(.75);
+    }
+
     #{$textarea} & {
       top: 1.9vw;
     }
@@ -74,6 +79,8 @@
   }
 
   &__button {
+
+
 
     &--disabled {
     }
