--- a/src/placeholder/placeholder.scss
+++ b/src/placeholder/placeholder.scss
@@ -30,11 +30,19 @@
     opacity: 0;
     visibility: hidden;
 
+    @include tablet-big-screen {
+      font-size: 5vw;
+    }
+
 
     #{$not-empty} & {
       opacity: 1;
       visibility: visible;
       transform: translateY(-2.4vw) scale(.75);
+
+      @include tablet-big-screen {
+        transform: translateY(-11vw) scale(.75);
+      }
     }
 
     #{$textarea} & {
