--- a/src/clients/clients.scss
+++ b/src/clients/clients.scss
@@ -57,6 +57,10 @@
     margin-right: 3.8vw;
     position: relative;
 
+    @include tablet-big-screen {
+      font-size: 10vw;
+    }
+
     &:after {
       @include pseudo-absolute;
       width: .3vw;
@@ -72,6 +76,11 @@
     width: 100%;
     height: 51vw;
     position: relative;
+
+    @include tablet-big-screen {
+      margin-top: 20vw;
+      height: 240vw;
+    }
   }
 
   &__title {
@@ -81,6 +90,10 @@
     line-height: 100%;
     letter-spacing: -0.033em;
     width: 7vw;
+
+    @include tablet-big-screen {
+      font-size: 11vw;
+    }
   }
 
   &__item {
@@ -98,6 +111,13 @@
       top: 12.2vw;
       height: 12vw;
       width: 12vw;
+
+      @include tablet-big-screen {
+        left: -8vw;
+        top: 140vw;
+        height: 40vw;
+        width: 40vw;
+      }
     }
 
     &--2 {
@@ -105,6 +125,10 @@
       top: 6.9vw;
       height: 7vw;
       width: 7vw;
+
+      @include tablet-big-screen {
+        display: none;
+      }
     }
 
     &--3 {
@@ -112,6 +136,14 @@
       top: 0.2vw;
       height: 15.4vw;
       width: 15.4vw;
+
+
+      @include tablet-big-screen {
+        left: 50vw;
+        top: 20vw;
+        height: 50vw;
+        width: 50vw;
+      }
     }
 
     &--4 {
@@ -119,6 +151,13 @@
       top: 23.2vw;
       height: 27.8vw;
       width: 27.8vw;
+
+      @include tablet-big-screen {
+        left: -21vw;
+        top: 50vw;
+        height: 75vw;
+        width: 75vw;
+      }
     }
 
     &--5 {
@@ -126,6 +165,13 @@
       top: 12.9vw;
       height: 18.8vw;
       width: 18.8vw;
+
+      @include tablet-big-screen {
+        left: 46vw;
+        top: 105vw;
+        height: 60vw;
+        width: 60vw;
+      }
     }
 
     &--6 {
@@ -133,6 +179,13 @@
       top: 22.7vw;
       height: 12.1vw;
       width: 12.1vw;
+
+      @include tablet-big-screen {
+        left: 23vw;
+        top: 174vw;
+        height: 77vw;
+        width: 77vw;
+      }
     }
 
     &--7 {
@@ -140,6 +193,10 @@
       top: 37.2vw;
       height: 12.1vw;
       width: 12.1vw;
+
+      @include tablet-big-screen {
+        display: none;
+      }
     }
   }
 
@@ -149,6 +206,10 @@
 
     &--gs {
       width: 3.4392vw;
+
+      @include tablet-big-screen {
+        width: 12vw;
+      }
     }
 
     &--creo {
@@ -157,18 +218,34 @@
 
     &--0-100 {
       width: 7.7644vw;
+
+      @include tablet-big-screen {
+        width: 17vw;
+      }
     }
 
     &--traffic {
       width: 8.3897vw;
+
+      @include tablet-big-screen {
+        width: 28vw;
+      }
     }
 
     &--chart {
       width: 2.6576vw;
+
+      @include tablet-big-screen {
+        width: 13vw;
+      }
     }
 
     &--vooodoo {
       width: 5.2110vw;
+
+      @include tablet-big-screen {
+        width: 26vw;
+      }
     }
 
     &--other {
