--- a/src/have-a-task/have-a-task.scss
+++ b/src/have-a-task/have-a-task.scss
@@ -19,6 +19,7 @@
 
   &--modal {
     padding-top: 1vw;
+    min-height: 100vh;
   }
 
   $white: '.have-a-task--white';
@@ -29,8 +30,16 @@
     padding-left: 25vw;
     padding-bottom: 13.4vw;
 
+    @include tablet-big-screen {
+      padding-left: 0;
+    }
+
     #{$case} & {
       padding-left: 1vw;
+
+      @include tablet-big-screen {
+        padding-left: 0;
+      }
     }
 
     #{$modal} & {
@@ -47,6 +56,12 @@
     font-size: 13.8613vw;
     letter-spacing: -0.047em;
     white-space: nowrap;
+
+    @include tablet-big-screen {
+      font-size: 22.5638vw;
+      white-space: normal;
+      line-height: 100%;
+    }
 
     #{$case} & {
       @include manrope;
@@ -80,6 +95,14 @@
       width: 18vw;
       margin-bottom: 0;
     }
+
+    @include tablet-big-screen {
+      font-size: 8.7196vw;
+      padding-left: 0;
+      width: 71vw;
+      margin-top: 10vw;
+      line-height: 103%;
+    }
   }
 
   &__form {
@@ -102,6 +125,10 @@
     grid-template-columns: 1fr 1fr;
     grid-gap: 5vw;
     margin-bottom: 4.9vw;
+
+    @include tablet-big-screen {
+      grid-template-columns: 1fr;
+    }
 
     #{$case} & {
       margin-bottom: 1.9vw;
@@ -128,6 +155,10 @@
     position: relative;
     width: fit-content;
 
+
+    @include tablet-big-screen {
+      font-size: 8.5vw;
+    }
 
     #{$modal} & {
       font-size: 4.6279vw;
