--- a/src/input/input.scss
+++ b/src/input/input.scss
@@ -21,6 +21,11 @@
   border: none;
   border-bottom: .1vw solid rgba(0, 0, 0, .16);
 
+  @include tablet-big-screen {
+    font-size: 5vw;
+    height: 14vw;
+  }
+
   #{$not-empty} & {
 
   }
