--- a/src/our-services/our-services.scss
+++ b/src/our-services/our-services.scss
@@ -46,6 +46,13 @@
     padding: 3vw 0;
     border-bottom: .1vw solid var(--white-color);
     margin-bottom: 2.7vw;
+
+    @include tablet-big-screen {
+      grid-template-columns: 1fr;
+      position: relative;
+      padding: 4vw 0;
+      padding-bottom: 10vw;
+    }
   }
 
   &__item-number {
@@ -55,6 +62,15 @@
     width: 2.7vw;
     height: 2.7vw;
     margin-top: 2vw;
+
+    @include tablet-big-screen {
+      position: absolute;
+      right: 0;
+      top: 5.2vw;
+      width: 7.7vw;
+      height: 7.7vw;
+      font-size: 3vw;
+    }
   }
 
   &__item-desc {
@@ -67,12 +83,21 @@
     font-size: 3.4392vw;
     letter-spacing: -0.033em;
     margin-bottom: 1.3vw;
+
+    @include tablet-big-screen {
+      font-size: 9.5vw;
+    }
   }
 
   &__item-desc-text {
     font-size: 1.1464vw;
     line-height: 126%;
     letter-spacing: -0.033em;
+
+    @include tablet-big-screen {
+      font-size: 3vw;
+      margin: 10vw 0;
+    }
   }
 
   &__item-link {
@@ -82,5 +107,23 @@
     letter-spacing: -0.033em;
     margin-left: auto;
     margin-top: auto;
+    color: var(--main-color);
+    position: relative;
+    cursor: pointer;
+
+    @include tablet-big-screen {
+      font-size: 6vw;
+      margin-left: 0;
+      width: fit-content;
+    }
+
+    &:after {
+      @include pseudo-absolute;
+      width: 100%;
+      height: .3vw;
+      background: var(--main-color);
+      left: 0;
+      bottom: -.5vw;
+    }
   }
 }
