--- a/src/we-are/we-are.scss
+++ b/src/we-are/we-are.scss
@@ -17,6 +17,11 @@
     @include flex-row;
     justify-content: space-between;
     margin-bottom: -2vw;
+
+    @include tablet-big-screen {
+      padding-left: 0;
+      @include flex-column;
+    }
   }
 
   &__subtitle-item {
@@ -34,6 +39,10 @@
     font-weight: 700;
     font-size: 3.4392vw;
     letter-spacing: -0.033em;
+
+    @include tablet-big-screen {
+      font-size: 6vw;
+    }
   }
 
   &__subtitle-item-text-line {
@@ -45,6 +54,11 @@
     margin-top: -1vw;
     height: auto;
     display: block;
+
+    @include tablet-big-screen {
+      width: 37vw;
+      margin-right: -8vw;
+    }
   }
 
   &__title {
@@ -65,12 +79,21 @@
     display: grid;
     grid-template-columns: 33vw 24vw;
     grid-gap: 1vw;
+
+
+    @include tablet-big-screen {
+      grid-template-columns: 1fr;
+    }
   }
 
   &__desc-item {
     @include manrope;
     font-size: 3.4392vw;
     letter-spacing: -0.033em;
+
+    @include tablet-big-screen {
+      font-size: 8vw;
+    }
 
     &--1 {
     }
@@ -87,6 +110,11 @@
 
     &--2 {
       width: 11vw;
+
+      @include tablet-big-screen {
+        width: 100%;
+        font-size: 6.4vw;
+      }
     }
   }
 
@@ -100,6 +128,10 @@
     line-height: 112%;
     letter-spacing: -0.033em;
     font-weight: 300;
+
+    @include tablet-big-screen {
+      font-size: 6.4vw;
+    }
 
     &--bold {
       font-weight: 700;
@@ -119,6 +151,10 @@
     font-size: 13.8613vw;
     margin-top: 6.5vw;
     letter-spacing: -0.033em;
+
+    @include tablet-big-screen {
+      margin-top: 60vw;
+    }
   }
 
   &__owners-title-text-line {
@@ -130,6 +166,12 @@
     width: 12.2vw;
     right: -0.5vw;
     top: 5.5vw;
+
+    @include tablet-big-screen {
+      width: 27.2vw;
+      right: 53.5vw;
+      top: -32.5vw;
+    }
   }
 
   &__owners-title-subtext {
@@ -141,6 +183,12 @@
     margin-top: 5vw;
     padding-left: 60vw;
     width: 74vw;
+
+    @include tablet-big-screen {
+      padding-left: 0;
+      width: 100%;
+      font-size: 5vw;
+    }
   }
 
   &__owners-items {
@@ -149,6 +197,10 @@
     grid-gap: 9.6925vw;
     margin-top: -1.4vw;
     margin-bottom: 6.5vw;
+
+    @include tablet-big-screen {
+      grid-template-columns: 1fr;
+    }
   }
 
   &__owners-items-desc {
@@ -157,6 +209,14 @@
     line-height: 100%;
     letter-spacing: -0.033em;
     padding-right: 6vw;
+
+    @include tablet-big-screen {
+      padding-right: 0;
+      width: 100%;
+      font-size: 5vw;
+      padding-top: 9vw;
+      padding-left: 34vw;
+    }
   }
 
   &__owners-item {
@@ -177,6 +237,10 @@
     object-fit: cover;
     object-position: center;
     margin-bottom: 1.5vw;
+
+    @include tablet-big-screen {
+      height: 115vw;
+    }
   }
 
   &__owners-item-name {
@@ -185,6 +249,10 @@
     line-height: 100%;
     letter-spacing: -0.033em;
     margin-bottom: 1vw;
+
+    @include tablet-big-screen {
+      font-size: 11vw;
+    }
   }
 
   &__owners-item-position {
@@ -193,18 +261,31 @@
     letter-spacing: -0.033em;
     opacity: 0.2;
     margin-bottom: 2.5vw;
+
+    @include tablet-big-screen {
+      font-size: 9vw;
+    }
   }
 
   &__owners-item-desc {
     font-size: 1.1464vw;
     line-height: 112%;
     letter-spacing: -0.033em;
+
+    @include tablet-big-screen {
+      font-size: 5vw;
+    }
   }
 
   &__link-block {
     display: grid;
     grid-template-columns: 13vw 1fr;
     grid-gap: 12.7vw;
+
+    @include tablet-big-screen {
+      grid-template-columns: 1fr;
+      margin-top: 25vw;
+    }
   }
 
   &__link-title {
@@ -214,6 +295,10 @@
     line-height: 100%;
     letter-spacing: -0.033em;
     margin-top: 1.1vw;
+
+    @include tablet-big-screen {
+      font-size: 7vw;
+    }
   }
 
   &__link-desc {
@@ -222,6 +307,10 @@
     font-size: 6.9306vw;
     //line-height: 100%;
     letter-spacing: -0.033em;
+
+    @include tablet-big-screen {
+      font-size: 10vw;
+    }
   }
 
   &__link-desc-text {
